--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Camera Wold</title>
+    <title>Camera Zone</title>
 
     <!-- Font Awsome -->
     <script
@@ -258,7 +258,7 @@
     </div>
     <footer>
       <h3>Camera Zone</h3>
-      <p>Influencer products</p>
+      <p>Camera product's</p>
       <small>&copy; All Right Reserved By <span class="color">Shaikh cardstafa</span></small>
       <div class="social-icon">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
