--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
     <footer>
       <h3>Camera Zone</h3>
-      <p>Camera product's</p>
+      <p>Photygraphy product's</p>
       <small>&copy; All Right Reserved By <span class="color">Shaikh cardstafa</span></small>
       <div class="social-icon">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
